// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for multi-ALM binding: editing a definition 1`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={false}
    timeout={100}
  >
    <AlmBindingDefinitionsTable
      additionalColumnsHeaders={
        Array [
          "url",
          "app_id",
        ]
      }
      alm="github"
      definitions={
        Array [
          Object {
            "additionalColumns": Array [
              "http://github.enterprise.com",
              "123456",
            ],
            "key": "key",
          },
        ]
      }
      onCreate={[MockFunction]}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
    <AlmBindingDefinitionForm
      bindingDefinition={
        Object {
          "appId": "123456",
          "key": "key",
          "privateKey": "asdf1234",
          "url": "http://github.enterprise.com",
        }
      }
      help={
        <FormattedMessage
          defaultMessage="settings.almintegration.github.info"
          id="settings.almintegration.github.info"
          values={
            Object {
              "link": <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                target="_blank"
                to="/documentation/analysis/pr-decoration/"
              >
                learn_more
              </Link>,
            }
          }
        />
      }
      onCancel={[MockFunction]}
      onSubmit={[MockFunction]}
      showInModal={true}
    >
      <Component />
    </AlmBindingDefinitionForm>
  </DeferredSpinner>
</div>
`;

exports[`should render correctly for multi-ALM binding: loaded 1`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={false}
    timeout={100}
  >
    <AlmBindingDefinitionsTable
      additionalColumnsHeaders={
        Array [
          "url",
          "app_id",
        ]
      }
      alm="github"
      definitions={
        Array [
          Object {
            "additionalColumns": Array [
              "http://github.enterprise.com",
              "123456",
            ],
            "key": "key",
          },
        ]
      }
      onCreate={[MockFunction]}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</div>
`;

exports[`should render correctly for multi-ALM binding: loading 1`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={true}
    timeout={100}
  >
    <AlmBindingDefinitionsTable
      additionalColumnsHeaders={
        Array [
          "url",
          "app_id",
        ]
      }
      alm="github"
      definitions={
        Array [
          Object {
            "additionalColumns": Array [
              "http://github.enterprise.com",
              "123456",
            ],
            "key": "key",
          },
        ]
      }
      onCreate={[MockFunction]}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</div>
`;

exports[`should render correctly for multi-ALM binding: with features 1`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={false}
    timeout={100}
  >
    <AlmBindingDefinitionsTable
      additionalColumnsHeaders={
        Array [
          "url",
          "app_id",
        ]
      }
      alm="github"
      definitions={
        Array [
          Object {
            "additionalColumns": Array [
              "http://github.enterprise.com",
              "123456",
            ],
            "key": "key",
          },
        ]
      }
      onCreate={[MockFunction]}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
  <div
    className="big-spacer-top big-padded-top bordered-top"
  >
    <h3
      className="big-spacer-bottom"
    >
      settings.almintegration.features
    </h3>
    <div
      className="display-flex-wrap"
    >
      <AlmIntegrationFeatureBox
        active={true}
        description="Bar"
        key="0"
        name="Foo"
      />
      <AlmIntegrationFeatureBox
        active={false}
        description="Bim"
        key="1"
        name="Baz"
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly for single-ALM binding 1`] = `
<div
  className="big-padded"
>
  <AlmBindingDefinitionForm
    bindingDefinition={
      Object {
        "appId": "123456",
        "key": "key",
        "privateKey": "asdf1234",
        "url": "http://github.enterprise.com",
      }
    }
    help={
      <FormattedMessage
        defaultMessage="settings.almintegration.github.info"
        id="settings.almintegration.github.info"
        values={
          Object {
            "link": <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              target="_blank"
              to="/documentation/analysis/pr-decoration/"
            >
              learn_more
            </Link>,
          }
        }
      />
    }
    hideKeyField={true}
    loading={true}
    onCancel={[MockFunction]}
    onDelete={[MockFunction]}
    onEdit={[MockFunction]}
    onSubmit={[MockFunction]}
    readOnly={true}
    success={false}
  >
    <Component />
  </AlmBindingDefinitionForm>
</div>
`;

exports[`should render correctly for single-ALM binding 2`] = `
<div
  className="big-padded"
>
  <AlmBindingDefinitionForm
    bindingDefinition={
      Object {
        "appId": "123456",
        "key": "key",
        "privateKey": "asdf1234",
        "url": "http://github.enterprise.com",
      }
    }
    help={
      <FormattedMessage
        defaultMessage="settings.almintegration.github.info"
        id="settings.almintegration.github.info"
        values={
          Object {
            "link": <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              target="_blank"
              to="/documentation/analysis/pr-decoration/"
            >
              learn_more
            </Link>,
          }
        }
      />
    }
    hideKeyField={true}
    loading={false}
    onCancel={[MockFunction]}
    onDelete={[MockFunction]}
    onEdit={[MockFunction]}
    onSubmit={[MockFunction]}
    readOnly={true}
    success={false}
  >
    <Component />
  </AlmBindingDefinitionForm>
</div>
`;

exports[`should render correctly for single-ALM binding 3`] = `
<div
  className="big-padded"
>
  <AlmBindingDefinitionForm
    bindingDefinition={
      Object {
        "appId": "123456",
        "key": "key",
        "privateKey": "asdf1234",
        "url": "http://github.enterprise.com",
      }
    }
    help={
      <FormattedMessage
        defaultMessage="settings.almintegration.github.info"
        id="settings.almintegration.github.info"
        values={
          Object {
            "link": <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              target="_blank"
              to="/documentation/analysis/pr-decoration/"
            >
              learn_more
            </Link>,
          }
        }
      />
    }
    hideKeyField={true}
    loading={false}
    onCancel={[MockFunction]}
    onDelete={[MockFunction]}
    onEdit={[MockFunction]}
    onSubmit={[MockFunction]}
    readOnly={true}
    success={false}
  >
    <Component />
  </AlmBindingDefinitionForm>
</div>
`;
